@@ -187,7 +187,7 @@ try_get_reply (Display           *xdisplay,
       int actual_format;
       unsigned long n_items;
       unsigned long bytes_after;
-      char *data;
+      unsigned char *data;
       char *name;
       struct timeval current_time;
 
@@ -421,7 +421,7 @@ run_speed_comparison (Display *xdisplay,
           int actual_format;
           unsigned long n_items;
           unsigned long bytes_after;
-          char *data;
+          unsigned char *data;
 
           assert (ag_task_have_reply (task));
           
