@@ -199,7 +199,7 @@ get_property (MetaDisplay        *display,
                           False, req_type, &results->type, &results->format,
                           &results->n_items,
                           &results->bytes_after,
-                          (guchar **)&results->prop) != Success ||
+                          &results->prop) != Success ||
       results->type == None)
     {
       if (results->prop)
@@ -1051,7 +1051,7 @@ meta_prop_get_values (MetaDisplay   *display,
                                       &results.type, &results.format,
                                       &results.n_items,
                                       &results.bytes_after,
-                                      (char **)(&results.prop)) != Success ||
+                                      &results.prop) != Success ||
           results.type == None)
         {
           values[i].type = META_PROP_VALUE_INVALID;
